update status manager

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="format-detection" content="address=no" />
     <meta name="format-detection" content="date=no" />
 
-    <title>react-refresher</title>
+    <title>react-status-manager</title>
   </head>
   <body>
     <div id="app"></div>
